feat: user login/logout
