# server/repository/model/user.go
@@ -12,7 +12,7 @@ const (
 type User struct {
 	ID           int        `gorm:"primaryKey"`
 	Email        string     `gorm:"type:varchar(128);unique;not null"`
-	Password     string     `gorm:"type:varchar(32);not null"`
+	Password     string     `gorm:"type:varchar(255);not null"`
 	Status       int        `gorm:"type:int;not null"`
 	ActivateTime *time.Time `gorm:"column:activate_time"`
 	CreatedAt    time.Time  `gorm:"column:created_at;autoCreateTime"`
